Fix home button not having an ink drop when toggled on.

The home button's width was being set to 0 when it was off, which caused
its ink drop to be also set to size 0, but the ink drop isn't updated
when the bounds change later. This patch fixes this by having the home
button's width never be set to 0.

A test was hitting a DCHECK because of this, so that test is re-enabled.

Bug: 853990
Change-Id: I5313aead457c4c51db6c8201ad9bc8e652935e52
Reviewed-on: https://chromium-review.googlesource.com/1109270
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569826}
Former-commit-id: 74064adc6b0cf6a88670b623d9a440234a50213e